--- a/css/style.css
+++ b/css/style.css
@@ -1370,6 +1370,7 @@ ul .dellivery_company {
 
 .nav_footer .logout {
 	margin-left: 20px;
+	margin-right: 4px;
 	color: rgba(255, 255, 255);
 	padding: 0;
 }
@@ -1409,6 +1410,7 @@ ul .dellivery_company {
 .footer_options ul {
 	margin: 0;
 	padding: 0;
+	opacity: 0.7;
 }
 
 .footer_middle {
@@ -1424,7 +1426,7 @@ ul .dellivery_company {
 
 .footer_middle ul {
 	padding: 0;
-	margin-left: 165px;
+	margin-left: 164px;
 	max-width: 613px;
 }
 
@@ -1729,7 +1731,7 @@ ul .dellivery_company {
 .catalog {
 	-ms-flex-preferred-size: 760px;
 	flex-basis: 760px;
-	margin-bottom: 76px;
+	margin-bottom: 75px;
 }
 
 .sorting {
